[metadata]
name = prop
version = 1.1.4
author = minomushi
url = https://github.com/mino-38/prop
description = "HTTP request tool with a little functionality"
long_description = file: README.md
license = MIT

[options]
install_requires =
    requests
    requests[socks]
    beautifulsoup4
    fake-useragent
    robotsparsetools
    tqdm
packages = find:

[options.entry_points]
console_scripts =
   prop = prop.__main__:main

[options.package_data]
prop = 
    *.json
