[metadata]
name = prop-get
version = 1.1.4
author = minomushi
url = https://github.com/mino-38/prop
description = "HTTP request tool with a little functionality"
long_description = file: README.md
license = MIT
keywords = crawler parser html
classifiers =
    License :: OSI Approved :: MIT license
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
install_requires =
    requests
    requests[socks]
    beautifulsoup4
    fake-useragent
    robotsparsetools
    tqdm
packages = find:

[options.entry_points]
console_scripts =
   prop = prop.__main__:main

[options.package_data]
prop = 
    *.json
